@@ -8,7 +8,7 @@
 
 - **Status:** Accepted
 - **Date:** 27/06/2026
-- **Related:** `DigiShield_Technical_Design.md` (Ch.1, Ch.19), `DigiShield_MultiTenant_Implementation_Guide.md`
+- **Related:** `DigiShield_Technical_Design.md` (Ch.1, Ch.19 — incl. §19.11 Implementation Guide)
 
 ### Context
 
@@ -67,11 +67,11 @@ Revisit when any of these signs appear: the development team exceeds ~3 groups n
 
 ---
 
-## ADR-002 — Backend stack: Java 21 (LTS) + Spring Boot + Spring Modulith
+## ADR-002 — Backend stack: Java + Spring Boot + Spring Modulith
 
-- **Status:** Accepted (revised — see "Runtime Java version" below)
+- **Status:** Accepted (runtime version revised — see "Runtime Java version" below)
 - **Date:** 27/06/2026
-- **Related:** ADR-001, `DigiShield_Architecture_Deploy_CICD.md`
+- **Related:** ADR-001, the [Realization Appendix](#realization-appendix--directory-architecture-packaging--cicd) below
 
 ### Context
 
@@ -79,7 +79,7 @@ We need to finalize the backend language/framework. Key constraints & needs: **V
 
 ### Decision
 
-The backend uses **Java 21 (LTS) + Spring Boot 3.5.x + Spring Modulith 1.4.x**, with:
+The backend uses **Java + Spring Boot + Spring Modulith** (realized on **Java 25 + Spring Boot 4.1.0 + Spring Modulith 2.1.0**; originally decided as Java 21 LTS + Spring Boot 3.5.x — see "Runtime Java version" below), with:
 - **Spring Modulith** — realizes the modular monolith: module boundaries are automatically verified, communication via events, easy microservice extraction later (matches ADR-001).
 - **Spring Security** — JWT, RBAC, SSO SAML/OAuth, SCIM.
 - **Spring Batch** — campaigns & bulk email/SMS sending.
@@ -103,29 +103,15 @@ The backend uses **Java 21 (LTS) + Spring Boot 3.5.x + Spring Modulith 1.4.x**, 
 | Quarkus/Micronaut | Lightweight & fast startup; smaller community/talent pool than Spring. |
 | **Java 21 + Spring Boot + Modulith (chosen)** | The best balance for the Vietnamese gov/enterprise context + the ADR-001 architecture, on a fully-supported, stable toolchain. |
 
-### Runtime Java version — Java 21 LTS (revision)
+### Runtime Java version — Java 25 (current)
 
-This ADR originally targeted **Java 25**. During implementation we moved the build/runtime to **Java 21 (LTS)** for toolchain stability:
+The build/runtime targets **Java 25 + Spring Boot 4.1.0 + Spring Modulith 2.1.0 + Gradle 9.6.1** (wrapper committed): toolchain `languageVersion = 25` in the convention plugins, runtime images `eclipse-temurin:25-jdk`/`:25-jre`, and CI `setup-java` 25. No Java 25-only language features are required (virtual threads, records, pattern matching all exist on earlier LTS too); the version is a toolchain/runtime choice.
 
-- **Ecosystem support.** Java 25 (GA 9/2025) is only supported by **Spring Boot ≥ 3.5.5 / Boot 4.0** and **Gradle ≥ 9.1**. Building on Java 25 with the pinned toolchain (Spring Boot 3.5.x + Gradle 8.x) fails at component scanning — Spring's bundled ASM cannot read class-file major version 69 (`Unsupported class file major version 69`).
-- **No functional loss.** The codebase uses no Java 25-only language features; virtual threads (Project Loom), records, pattern matching, etc. are all available on Java 21. There is no runtime benefit to Java 25 for this project today.
-- **Stable, supported combo.** **Java 21 LTS + Spring Boot 3.5.5 + Spring Modulith 1.4.1 + Gradle 8.5** is an officially supported, low-risk combination that builds and runs as-is.
-
-The source remains forward-compatible: adopting Java 25 later only requires bumping the Gradle wrapper to ≥ 9.1 and (optionally) Spring Boot to 4.0, then raising the toolchain `languageVersion` back to 25.
-
-### Runtime Java version — Java 25 (revision, realized)
-
-The forward-compatible path above has since been taken. The build/runtime now targets **Java 25**, on the toolchain combination that supports it:
-
-- **Realized stack:** **Java 25 + Spring Boot 4.1.0 + Spring Modulith 2.1.0 + Gradle 9.6.1** (wrapper committed). This is exactly the upgrade the Java 21 revision flagged as required (Gradle ≥ 9.1, Boot 4.x, toolchain `languageVersion` back to 25), so the earlier `Unsupported class file major version 69` failure no longer applies.
-- **Why now.** The ecosystem reached stable Java 25 support (Boot 4.x / Gradle 9.x), satisfying the "Gradle/Spring toolchain reaches stable Java 25 support" review condition below.
-- **Scope.** Build toolchain (`languageVersion = 25` in the convention plugins), the runtime images (`eclipse-temurin:25-jdk`/`:25-jre`), and CI (`setup-java` 25). No Java 25-only language features are required; the upgrade is toolchain/runtime-level.
-
-> Historical note: the Java 21 LTS section above is retained as the prior decision. Java 25 is the current state of the code.
+> **History.** This ADR first targeted Java 25, then briefly pinned **Java 21 LTS** during early implementation for toolchain stability — Spring Boot 3.5.x + Gradle 8.x could not read class-file major version 69 (`Unsupported class file major version 69`). Once the ecosystem reached stable Java 25 support (Boot 4.x / Gradle 9.x), the forward-compatible upgrade path was taken (Gradle ≥ 9.1, Boot 4.x, `languageVersion` back to 25). Java 25 is the current state of the code.
 
 ### Review Conditions
 
-Revisit if: the core team is not Java; an extremely low footprint / instant startup is needed at scale (consider native image or a lighter stack for some extracted services); a "single language for FE+BE" strategy becomes a priority; or the Gradle/Spring toolchain reaches stable Java 25 support and a newer LTS is desired.
+Revisit if: the core team is not Java; an extremely low footprint / instant startup is needed at scale (consider native image or a lighter stack for some extracted services); a "single language for FE+BE" strategy becomes a priority; or a newer LTS becomes desirable.
 
 ---
 
@@ -133,7 +119,7 @@ Revisit if: the core team is not Java; an extremely low footprint / instant star
 
 - **Status:** Accepted
 - **Date:** 27/06/2026
-- **Related:** ADR-002, `DigiShield_MultiTenant_Implementation_Guide.md`, `DigiShield_Architecture_Deploy_CICD.md`, skeleton `db/migration`
+- **Related:** ADR-002, `DigiShield_Technical_Design.md` (§19.11 Implementation Guide), the [Realization Appendix](#realization-appendix--directory-architecture-packaging--cicd) below, skeleton `db/migration`
 
 ### Context
 
@@ -208,4 +194,317 @@ FE and BE are owned by separate teams with independent release cadence and gover
 
 ---
 
-*Add new ADRs at the end of the file following the same template (ADR-005…).*
+## Realization Appendix — Directory Architecture, Packaging & CI/CD
+
+> Realizes **ADR-001** (Modular Monolith + separated Worker) and **ADR-002** (Java + Spring Boot + Spring Modulith).
+> Stack (realized): **Java 25 · Spring Boot 4.1.0 · Spring Modulith 2.1.0 · Gradle 9.6.1** (wrapper committed), PostgreSQL, Redis, RabbitMQ/Kafka, Docker, Kubernetes + Helm, GitHub Actions (equivalents are interchangeable). CI/CD lives at the monorepo-root `.github/workflows/` (`backend-ci.yml` + `frontend-ci.yml`, path-filtered).
+
+### A1. Organizing Principles
+
+- **A single Spring Boot app** (modular monolith), divided into **Spring Modulith modules** with clear boundaries — Modulith **verifies boundaries automatically** in tests.
+- **One artifact (JAR/image) → multiple run modes** (api/worker/scheduler) selected via **Spring profile**, not multiple separate applications.
+- **Inter-module communication via events** (`ApplicationEventPublisher` + Spring Modulith Events, with an outbox for durability) instead of direct cross-calls → easier microservice extraction later.
+- **Gradle multi-module** to isolate compilation & dependencies; business modules depend only on `shared` + `contracts`.
+
+### A2. Directory Architecture (Gradle multi-module)
+
+```
+digishield/
+├─ settings.gradle.kts          # declares the subprojects
+├─ build.gradle.kts             # common configuration (Java 25, Spring BOM)
+│
+├─ boot/
+│  └─ app/                      # the ONLY Spring Boot app (entrypoint)
+│     ├─ src/main/java/com/digishield/DigishieldApplication.java
+│     └─ src/main/resources/    # application.yml + profiles (api/worker/scheduler)
+│
+├─ modules/                     # business MODULES (Spring Modulith)
+│  ├─ auth/
+│  ├─ tenancy/                  # tenant, plan, subscription, feature-flags
+│  ├─ learning/
+│  ├─ simulation/
+│  ├─ reporting/
+│  ├─ analytics/
+│  ├─ notification/
+│  ├─ ai/
+│  └─ interception/             # transaction intervention SDK
+│
+├─ shared/
+│  ├─ persistence/              # JPA config, RLS, TenantRoutingDataSource
+│  ├─ tenant-context/           # TenantContext (ThreadLocal), filter, AOP
+│  ├─ messaging/                # queue abstraction (publish/consume) + outbox
+│  ├─ security/                 # JWT, RBAC, SSO (SAML/OAuth), SCIM
+│  └─ observability/            # Micrometer, tracing (attach tenant_id)
+│
+├─ contracts/                   # DTO, OpenAPI-generated types, event records
+│
+├─ db/migration/                # Flyway: V2026.06.27.001__*.sql (expand→migrate→contract)
+│
+├─ deploy/
+│  ├─ docker/Dockerfile         # multi-stage, JRE 25, layered jar
+│  ├─ helm/digishield/          # Helm chart (see section A7)
+│  └─ compose/                  # docker-compose dev
+│
+├─ .github/workflows/           # CI/CD (see section A8)
+└─ gradle/ + gradlew
+```
+
+**Why "1 boot app + multiple Gradle modules":** all business logic lives in `modules/*` (each a Gradle subproject, package-private internally). `boot/app` only assembles & configures. When extracting a microservice, create `boot/app-ai` depending only on `modules/ai` + `shared`.
+
+**Boundary verification (Spring Modulith) — mandatory test:**
+
+```java
+class ModularityTests {
+  @Test void verifyModules() {
+    ApplicationModules.of(DigishieldApplication.class).verify(); // fail if a boundary is broken
+  }
+}
+```
+
+### A3. Structure of a Module (Spring Modulith)
+
+Each module is a root package; internals are **package-private**, exposing the API only through interfaces/`@NamedInterface`:
+
+```
+modules/simulation/src/main/java/com/digishield/simulation/
+├─ package-info.java          # @ApplicationModule(allowedDependencies = {"shared", "contracts"})
+├─ api/                       # @NamedInterface: public service + event records
+├─ domain/                    # entity, value object, pure rules
+├─ application/               # use-case service, port
+└─ infrastructure/            # JPA repository, adapter (queue, gateway)  ← package-private
+```
+
+- Other modules **cannot import** `infrastructure`/`domain` (Modulith blocks it) — they use only `api`.
+- Inter-module communication via events:
+
+```java
+// simulation publishes an event, does NOT call learning directly
+events.publishEvent(new UserClickedSimulation(tenantId, userId, campaignId));
+
+// learning listens to auto-enroll
+@ApplicationModuleListener
+void on(UserClickedSimulation e) { enrollmentService.autoEnroll(e.userId()); }
+```
+
+### A4. Run mode: API · Worker · Scheduler (1 application)
+
+Same JAR/image, role selected via **Spring profile**:
+
+| Profile | What it enables | Scaled by |
+|---|---|---|
+| `api` | Web/WebSocket controllers; disables heavy listeners | QPS, WS connections |
+| `worker` | Queue consumers (send email/SMS, AI jobs) | Queue depth |
+| `scheduler` | `@Scheduled` (scheduled campaigns, risk computation) | 1 instance (ShedLock) |
+
+```java
+@Configuration @Profile("worker")
+class WorkerConfig { /* declare listeners/consumers */ }
+
+@Configuration @Profile("scheduler")
+@EnableScheduling
+class SchedulerConfig { /* use ShedLock so only 1 node runs cron */ }
+```
+
+Startup: `java -jar app.jar --spring.profiles.active=api` (or `worker`/`scheduler`). Enable virtual threads: `spring.threads.virtual.enabled=true`.
+
+### A5. Tenant Context in Spring
+
+#### A5.1. Hold the tenant per request
+
+```java
+public final class TenantContext {
+  private static final ThreadLocal<String> CURRENT = new ThreadLocal<>();
+  public static void set(String t){ CURRENT.set(t); }
+  public static String require(){
+    var t = CURRENT.get();
+    if (t == null) throw new AccessDeniedException("Missing tenant context"); // fail-closed
+    return t;
+  }
+  public static void clear(){ CURRENT.remove(); }
+}
+```
+
+#### A5.2. Filter that extracts the tenant from the JWT
+
+```java
+@Component
+class TenantFilter extends OncePerRequestFilter {
+  protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain)
+      throws ... {
+    try {
+      var jwt = (Jwt) ((JwtAuthenticationToken) req.getUserPrincipal()).getToken();
+      TenantContext.set(jwt.getClaimAsString("tid"));   // tenant_id from the token
+      chain.doFilter(req, res);
+    } finally { TenantContext.clear(); }     // must clear (even with virtual threads)
+  }
+}
+```
+
+#### A5.3. Apply the tenant to PostgreSQL (RLS) when opening a transaction
+
+```java
+@Aspect @Component
+class TenantTransactionAspect {
+  private final JdbcTemplate jdbc;
+  @Before("@annotation(org.springframework.transaction.annotation.Transactional)")
+  void setTenant() {
+    jdbc.update("SET LOCAL app.tenant_id = ?", TenantContext.require()); // lives within the transaction
+  }
+}
+```
+
+> Worker/scheduler set `TenantContext` from the `tenant_id` in the message/job before processing. Every query must run inside `@Transactional` for `SET LOCAL` to take effect (matches RLS in Technical Design §19.11, the Implementation Guide).
+
+### A6. Container Packaging
+
+**One image**, multi-stage, JRE 25, layered jar (caches well):
+
+```dockerfile
+# deploy/docker/Dockerfile
+FROM eclipse-temurin:25-jdk AS build
+WORKDIR /src
+COPY . .
+RUN ./gradlew :boot:app:bootJar --no-daemon
+
+FROM eclipse-temurin:25-jre AS runtime
+WORKDIR /app
+COPY --from=build /src/boot/app/build/libs/app.jar app.jar
+ENV JAVA_TOOL_OPTIONS="-XX:+UseZGC -XX:MaxRAMPercentage=75"
+ENV SPRING_THREADS_VIRTUAL_ENABLED=true
+# profile selects the run mode, override in K8s
+ENTRYPOINT ["java","-jar","app.jar"]
+CMD ["--spring.profiles.active=api"]
+```
+
+**Dev local — docker-compose** (one image, 3 services with different profiles):
+
+```yaml
+services:
+  api:       { build: ../.., command: ["--spring.profiles.active=api"], ports: ["8080:8080"] }
+  worker:    { build: ../.., command: ["--spring.profiles.active=worker"] }
+  scheduler: { build: ../.., command: ["--spring.profiles.active=scheduler"] }
+  postgres:  { image: postgres:16 }
+  redis:     { image: redis:7 }
+  rabbitmq:  { image: rabbitmq:3-management }
+```
+
+> **Lightweight on-prem option:** build a **GraalVM native image** (`./gradlew nativeCompile`) for fast startup & low RAM.
+
+### A7. Deployment with Helm (cloud & on-prem)
+
+One chart, 3 Deployments (different `--spring.profiles.active`) + a Flyway migration Job.
+
+```
+deploy/helm/digishield/
+├─ values.yaml            # cloud, pool
+├─ values-onprem.yaml     # on-prem/air-gapped, silo
+└─ templates/
+   ├─ deployment-api.yaml
+   ├─ deployment-worker.yaml
+   ├─ deployment-scheduler.yaml
+   ├─ job-flyway.yaml      # pre-upgrade hook: run migration before rollout
+   ├─ hpa-api.yaml         # scale api
+   ├─ hpa-worker.yaml      # scale worker by queue (KEDA)
+   └─ service / ingress / configmap / secret
+```
+
+```yaml
+# values.yaml (cloud, pool)
+image: { repository: registry.digishield.vn/app, tag: "2.0.0" }
+api:       { replicas: 3, args: ["--spring.profiles.active=api"] }
+worker:    { replicas: 4, args: ["--spring.profiles.active=worker"] }
+scheduler: { replicas: 1, args: ["--spring.profiles.active=scheduler"] }
+flyway:    { enabled: true }          # runs as a Job, the app does NOT self-migrate
+multitenancy: { defaultTier: pool, rls: true }
+```
+
+```yaml
+# values-onprem.yaml (air-gapped, silo)
+image: { repository: registry.internal.gov.vn/digishield/app, tag: "2.0.0" }
+deployment: { airgapped: true }
+multitenancy: { defaultTier: silo }
+ingress: { host: digishield.internal.gov.vn, tls: internal-ca }
+```
+
+- **Migration:** disable `spring.flyway` auto in the app; run Flyway via a **Job (Helm pre-upgrade hook)** for control (expand→migrate→contract). The rollout only continues when the Job succeeds.
+- **On-prem/air-gapped — offline bundle:** image `.tar` + chart `.tgz` + `values-onprem.yaml` + checklist; the customer runs `docker load` + `helm install`.
+
+### A8. CI/CD pipeline
+
+#### A8.1. Diagram
+
+```mermaid
+flowchart LR
+    PR[Push / PR] --> V[Gradle check: spotless + test]
+    V --> MOD[Spring Modulith boundary verify]
+    MOD --> ISO[Tenant isolation test - Testcontainers]
+    ISO --> IMG[Build image - Jib/Buildpacks]
+    IMG --> SC[Scan + SBOM + cosign sign]
+    SC --> PUSH[Push registry]
+    PUSH --> STG[Deploy Staging - ArgoCD]
+    STG --> MIG[Flyway Job]
+    MIG --> E2E[Smoke + E2E]
+    E2E --> GATE{Release approval}
+    GATE -->|Cloud| PROD[Deploy Prod]
+    GATE -->|On-prem| BUNDLE[Build offline bundle + checklist]
+```
+
+#### A8.2. Quality gates (block merge)
+
+- `./gradlew check` (unit + integration), **Spring Modulith `verify()`** (boundaries), **tenant isolation test** (Testcontainers Postgres: tenant A cannot read B), spotless/format, minimum coverage.
+- Vulnerability scan (Trivy/Grype) + SBOM + image signing (cosign).
+
+#### A8.3. GitHub Actions (condensed)
+
+```yaml
+name: ci
+on: [push, pull_request]
+jobs:
+  verify:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with: { distribution: temurin, java-version: '25' }
+      - run: ./gradlew check   # includes Modulith verify + tenant isolation test
+  build-push:
+    needs: verify
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with: { distribution: temurin, java-version: '25' }
+      - run: ./gradlew :boot:app:bootBuildImage --imageName=$REG/app:${{ github.sha }}  # Buildpacks
+      - run: trivy image --exit-code 1 $REG/app:${{ github.sha }}
+      - run: cosign sign --yes $REG/app:${{ github.sha }}
+      - run: docker push $REG/app:${{ github.sha }}
+  release-onprem:
+    needs: build-push
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    steps:
+      - run: docker save $REG/app:${{ github.ref_name }} -o app.tar
+      - run: helm package deploy/helm/digishield
+      - uses: actions/upload-artifact@v4
+        with: { name: onprem-bundle, path: "app.tar\ndigishield-*.tgz" }
+```
+
+- **GitOps:** ArgoCD syncs Helm from Git (staging automatic, prod gated by approval).
+- **On-prem is a versioned, signed artifact** for handover, not deployed directly.
+
+### A9. Configuration, Secrets & Release Conventions
+
+- **Config:** `application.yml` + overrides via environment variables (`SPRING_DATASOURCE_URL`, `SPRING_RABBITMQ_ADDRESSES`, `JWT_JWK_SET_URI`, `MT_DEFAULT_TIER`, `LLM_API_BASE`…); profiles `api|worker|scheduler` + `cloud|onprem`.
+- **Secrets:** cloud uses Vault/cloud KMS + Spring Cloud Vault/External Secrets; on-prem uses internal secrets. Do not commit secrets.
+- **Health:** Spring Boot Actuator `/actuator/health/{liveness,readiness}` for every run mode; worker readiness when it can connect to the queue.
+- **Observability:** Micrometer → Prometheus; OpenTelemetry tracing; JSON logs tagged with `tenant_id` (no PII logging).
+- **Branching & release:** trunk-based, short PRs; **SemVer + tag `vX.Y.Z`** triggers the cloud release & on-prem bundle build.
+- **Zero-downtime:** rolling update + backward-compatible migration (expand→migrate→contract); rollback via `helm rollback`.
+- **Government on-prem:** a separate release cycle, deliver bundle + upgrade notes, no forced lockstep with cloud.
+
+> The code/charts in this appendix are samples — adjust to your actual choices (e.g., Maven instead of Gradle, Kafka instead of RabbitMQ, Buildpacks/Jib optional, GraalVM native for lightweight on-prem).
+
+---
+
+*Add new ADRs above this appendix following the same template (ADR-005…).*
